--- a/7.PooledMemoryStream.md
+++ b/7.PooledMemoryStream.md
@@ -231,3 +231,16 @@ namespace PooledStream
                         State.DecrementDoingVersion();//还原doing Version
                 }
 ```
+```
+       //MemoryStream使用，Serializer来自ProtoBuf
+        public static async Task Send<T>(T data, string exchange, string queue, bool persistent = true)
+        {
+            byte[] msg;
+            using (var ms = new MemoryStream())
+            {
+                Serializer.Serialize(ms, data);
+                msg = ms.ToArray();
+            }
+            await Send(msg, exchange, queue, persistent);
+        }
+```
