--- a/7.PooledMemoryStream.md
+++ b/7.PooledMemoryStream.md
@@ -243,4 +243,32 @@ namespace PooledStream
             }
             await Send(msg, exchange, queue, persistent);
         }
+        //反序列化使用
+            using (var wms = new MemoryStream(bytes))
+            {
+                var message = Serializer.Deserialize<W>(wms);
+                if (MessageTypeMapper.EventTypeDict.TryGetValue(message.TypeCode, out var type))
+                {
+                    using (var ems = new MemoryStream(message.BinaryBytes))
+                    {
+                        if (Serializer.Deserialize(type, ems) is IEventBase<K> @event)
+                        {
+                            if (@event.Version > State.Version)
+                            {
+                                await tellChannel.WriteAsync(@event);
+                            }
+                        }
+                    }
+                }
+            }
 ```
+
+总结：
+1. 什么场景下使用MemoryStream？
+- 对象需要进行传输，需要序列化成二进制，用ProtoBuf+MemoryStream将对象变成byte[]。
+2. BufferedStream VS MemoryStream
+- 两个都是缓冲区，BufferedStream并不是将所有内容都存放到内存中，而MemoryStream则是。BufferedStream必须跟其他流如FileStream结合使用，而MemoryStream则不用，虽然可以把MemoryStream转换为其他流。
+- 结论：用MemoryStream
+3. PooledStream
+- MemoryStream with ArrayPool，this library aims to efficient MemoryStream for large data.
+- 结论：PooledStream >MemoryStream > BufferedStream
