--- a/7.PooledMemoryStream.md
+++ b/7.PooledMemoryStream.md
@@ -269,6 +269,6 @@ namespace PooledStream
 2. BufferedStream VS MemoryStream
 - 两个都是缓冲区，BufferedStream并不是将所有内容都存放到内存中，而MemoryStream则是。BufferedStream必须跟其他流如FileStream结合使用，而MemoryStream则不用，虽然可以把MemoryStream转换为其他流。
 - 结论：用MemoryStream
-3. PooledStream
+3. PooledMemoryStream 
 - MemoryStream with ArrayPool，this library aims to efficient MemoryStream for large data.
-- 结论：PooledStream >MemoryStream > BufferedStream
+- 结论：PooledMemoryStream  >MemoryStream > BufferedStream
