--- a/20181213.ValueTask测试.md
+++ b/20181213.ValueTask测试.md
@@ -49,3 +49,5 @@
     }
 ```
 ![img](https://note.youdao.com/yws/api/personal/file/B2063EEBD00A42DAAC459C86C9C5F4A1?method=download&shareKey=def5c75d224a1e3638c778d78029332d)
+
+结论：await越少性能越好
